[package]
name = "libsoxr"
version = "0.1.4"
authors = ["Reinier Balt <lrbalt@gmail.com>"]
description = "Wrapper for libsoxr (resampling library for sounds)"
repository = "https://github.com/lrbalt/libsoxr-rs"
documentation = "https://lrbalt.github.io/libsoxr-rs/libsoxr/"
keywords = ["audio", "sound", "resampling", "sox", "soxr"]
license = "LGPL-2.0"
build = "build.rs"
edition = "2018"

[dependencies]
libc = "0.2"
bitflags = "1.1"

[dev-dependencies]
approx="*"

[build-dependencies]
pkg-config = "0.3"
