[package]
name = "libsoxr"
version = "0.1.6"
authors = ["Reinier Balt <lrbalt@gmail.com>"]
description = "Wrapper for libsoxr (resampling library for sounds)"
repository = "https://github.com/lrbalt/libsoxr-rs"
documentation = "https://lrbalt.github.io/libsoxr-rs/libsoxr/"
keywords = ["audio", "sound", "resampling", "sox", "soxr"]
license = "LGPL-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"

[dependencies]
libc = "0.2"
bitflags = "1.2.1"
libsoxr-sys = "0.1"

[dev-dependencies]
approx = "0.4.0"

[build-dependencies]
pkg-config = "0.3"
